Add web, mobile app, and ERP skills

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ https://templatemo.com/tm-597-neural-glass
             <h1>ABEL EYASU</h1>
             <img src="images/Profile.jpg" alt="Abel Eyasu Portfolio" class="portfolio-image">
             <div class="hero-description">
-                <p>I am a highly organized and proactive Virtual Assistant, Executive Assistant, and Administrative Professional with over 4 years of experience supporting executives, entrepreneurs, and teams in streamlining operations and driving efficiency.</p>
+                <p>I am a highly organized and proactive Virtual Assistant, Executive Assistant, and Administrative Professional with over 4 years of experience supporting executives, entrepreneurs, and teams in streamlining operations and driving efficiency. I also build web, mobile app, and ERP solutions to help teams scale.</p>
             </div>
 
             <div class="hero-stats">
@@ -258,6 +258,60 @@ https://templatemo.com/tm-597-neural-glass
                 </div>
             </div>
 
+            <!-- Row 8 -->
+            <div class="feature-row">
+                <div class="feature-content glass">
+                    <div class="feature-icon">💻</div>
+                    <h3>Web Development</h3>
+                    <p>I build responsive, modern web experiences with clean UI, fast performance, and scalable front-end architecture.</p>
+                </div>
+                <div class="feature-visual glass">
+                    <iframe 
+                        src="https://www.youtube.com/embed/LCnIY7BEOP8" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen
+                        style="width:100%; height:100%; border:0; display:block; position:absolute; top:0; left:0; z-index:2;">
+                    </iframe>
+                </div>
+            </div>
+
+            <!-- Row 9 -->
+            <div class="feature-row">
+                <div class="feature-content glass">
+                    <div class="feature-icon">📱</div>
+                    <h3>Mobile App Development</h3>
+                    <p>Cross-platform mobile apps for iOS and Android focused on usability, performance, and real-world business needs.</p>
+                </div>
+                <div class="feature-visual glass">
+                    <iframe 
+                        src="https://www.youtube.com/embed/zYieIPFVW4E" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen
+                        style="width:100%; height:100%; border:0; display:block; position:absolute; top:0; left:0; z-index:2;">
+                    </iframe>
+                </div>
+            </div>
+
+            <!-- Row 10 -->
+            <div class="feature-row">
+                <div class="feature-content glass">
+                    <div class="feature-icon">🏢</div>
+                    <h3>ERP Development</h3>
+                    <p>Custom ERP modules that automate operations, centralize data, and deliver actionable reporting.</p>
+                </div>
+                <div class="feature-visual glass">
+                    <iframe 
+                        src="https://www.youtube.com/embed/ZUPoBJSxdRg" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen
+                        style="width:100%; height:100%; border:0; display:block; position:absolute; top:0; left:0; z-index:2;">
+                    </iframe>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
@@ -328,7 +382,21 @@ https://templatemo.com/tm-597-neural-glass
                 <div class="hexagon-inner glass">
                     <div class="hexagon-icon">🖋️</div>
                     <h4>Web Development</h4>
-                    <p>Lang=html, css, javascript, python, react<br> Tools= Github, VPS, cPanel, Figma</p>
+                    <p>HTML, CSS, JavaScript, Python, React<br>Tools: GitHub, VPS, cPanel, Figma</p>
+                </div>
+            </div>
+            <div class="hexagon">
+                <div class="hexagon-inner glass">
+                    <div class="hexagon-icon">📱</div>
+                    <h4>Mobile App Development</h4>
+                    <p>Cross-platform apps for iOS and Android with smooth UX, performance, and scalable architecture.</p>
+                </div>
+            </div>
+            <div class="hexagon">
+                <div class="hexagon-inner glass">
+                    <div class="hexagon-icon">🏢</div>
+                    <h4>ERP Development</h4>
+                    <p>Custom ERP modules that streamline operations, reporting, and data-driven decision-making.</p>
                 </div>
             </div>
             <br>
@@ -667,7 +735,7 @@ https://templatemo.com/tm-597-neural-glass
         <div class="contact-container">
             <div class="contact-info glass">
                 <h3>ESTABLISH CONNECTION</h3>
-                <p>I help executives and businesses save time, stay organized, and boost productivity through expert calendar and inbox management, workflow optimization, project coordination, and data reporting. My focus is on simplifying operations so leaders can concentrate on growth and strategy.</p>
+                <p>I help executives and businesses save time, stay organized, and boost productivity through expert calendar and inbox management, workflow optimization, project coordination, and data reporting. I also deliver web, mobile app, and ERP development to modernize operations. My focus is on simplifying work so leaders can concentrate on growth and strategy.</p>
                 <p>Let’s connect today and build the systems that make your work easier and more effective.</p>
                 
                 <div class="social-links" style="text-align: center; margin-top: 1em;">
